--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://hfcypm.github.io/blog
+url: https://hfcypm.github.io/blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -105,4 +105,3 @@ deploy:
   type: git
   repo: https://github.com/hfcypm/blog
   branch: gh-pages
-  message: [message]
