--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://hfcypm.github.io/
+url: https://hfcypm.github.io/hfcypm.github.io
+root: /hfcypm.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
