--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/hfcypm/blog
+  repo: https://github.com/hfcypm/hfcypm.github.io.git
   branch: gh-pages
